kubernetes/prod/app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: jimmyruann/desk_booking_api:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: jimmyruann/desk_booking_app:latest
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-migration
  labels:
    app: db-migration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-migration
  template:
    metadata:
      labels:
        app: db-migration
    spec:
      containers:
        - name: db-migration
          image: jimmyruann/desk_booking_prisma
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - port: 3333
  selector:
    app: api
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
    - port: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
  selector:
    app: redis
